src/objects/LMS_Transcript__c.object
<CustomObject>
    <description>Object that contains data imported by and integration between SFDC and the SumTotal LMS.</description>
    <fields>
        <fullName>Certification_Code__c</fullName>
        <label>Certification Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transcripts</relationshipLabel>
        <relationshipName>Transcripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>IF(AND(completion_status__c = &apos;Completed&apos;, entry_status__c = &apos;Enrolled&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Period__c</fullName>
        <label>Expiration Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>IF(AND(completion_status__c = &apos;Completed&apos;, entry_status__c = &apos;Expired&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Integration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>certificate_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>class_code__c</fullName>
        <label>Class Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class_id__c</fullName>
        <label>Class ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class_name__c</fullName>
        <label>Class Name</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>completion_date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>completion_status__c</fullName>
        <label>Completion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_ceu__c</fullName>
        <label>Course CEU</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_cost__c</fullName>
        <label>Course Cost</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_duration__c</fullName>
        <label>Course Duration</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_id__c</fullName>
        <label>Course ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_name__c</fullName>
        <label>Course Name</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>course_type__c</fullName>
        <label>Course Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>course_vendor_name__c</fullName>
        <label>Course Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>couse_status__c</fullName>
        <label>Couse Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_group_name__c</fullName>
        <label>Default Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>direct_supervisor_name__c</fullName>
        <label>Direct Supervisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>entry_status__c</fullName>
        <label>Entry Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>Unique Contact ID gerenated by Sum Total</description>
        <label>external_id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_modified_date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>learning_type__c</fullName>
        <label>Learning Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration_date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>score__c</fullName>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transcript</label>
    <nameField>
        <label>Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transcripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>